# lyriks

./: .gitignore  README.md  fetch-lyrics  genie_client.py  lyrics_fetcher.py  lyriks.py  main.py  mb_client.py  pyproject.toml  tox.ini
lyrics_fetcher/: __init__.py  genie_client.py  lyrics.py  lyrics_fetcher.py  mb_client.py
lyriks/: __init__.py  cli.py  const.py  default_group.py  genie_client.py  logging.py  lyrics.py  lyrics_fetcher.py  mb_client.py  provider_choice.py  qq_client.py  util.py  zzc_sign.py
lyriks/cli/: __init__.py  console.py  default_group.py  provider_choice.py  url_param_type.py
lyriks/lib/: zzc_sign.py
lyriks/lyrics/: __init__.py  lyrics.py  util.py
lyriks/providers/: __init__.py  bugs.py  genie.py  provider.py  qqm.py  registry.py  util.py  vibe.py
lyriks/providers/api/: bugs_api.py  genie_api.py  qqm_api.py  song.py  vibe_api.py
