[project]
name = "lyriks"
version = "0.4.0"
description = "A command line tool to fetch lyrics from Genie"
authors = [
    { name = "Maxr1998", email = "max@maxr1998.de" },
]
license = { text = "GPLv3" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "mutagen>=1.45",
    "click>=8.0.0",
]

[project.scripts]
lyriks = "lyriks:main"
