[project]
name = "lyriks"
version = "0.5.3"
description = "A command line tool to fetch lyrics from Genie"
authors = [
    { name = "Maxr1998", email = "max@maxr1998.de" },
]
license = "GPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "httpx[http2]>=0.22.0",
    "lxml>=6.0.2",
    "mutagen>=1.45",
    "pyqqmusicdes>=0.1.0",
    "rich>=14.2.0",
    "stamina>=25.2.0",
    "trio>=0.32.0",
]
scripts = { "lyriks" = "lyriks.cli:cli" }

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "preserve"
